# HHG

./: DESCRIPTION  NAMESPACE  Package-dev.Rproj  README.md  cleanup  configure  configure.ac
R/: HHG.R  HHGRCPP_API.r  HHG_additional_univariate.R  HHG_extras.R  HHG_univariate.R  HHG_utils.R  RcppExports.R
data/: Yeast_hughes.RData
inst/doc/: HHG.html
man/: Fast.independence.test.Rd  Fast.independence.test.nulltable.Rd  HHG-package.Rd  Yeast_hughes.Rd  hhg.example.datagen.Rd  hhg.test.Rd  hhg.univariate.ind.combined.test.Rd  hhg.univariate.ind.nulltable.Rd  hhg.univariate.ind.pvalue.Rd  hhg.univariate.ind.stat.Rd  hhg.univariate.ks.combined.test.Rd  hhg.univariate.ks.nulltable.Rd  hhg.univariate.ks.pvalue.Rd  hhg.univariate.ks.stat.Rd  hhg.univariate.nulltable.from.mstats.Rd  nr_bins_equipartition.Rd  print.HHG.Test.Result.Rd  print.UnivariateObject.Rd  print.UnivariateStatistic.Rd
src/: .gitignore  HHG.cpp  HHG.h  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  SequentialTest.cpp  SequentialTest.h  StatsComputer.cpp  StatsComputer.h  hhg_init.c  rcpp_internals.cpp
vignettes/: HHG.R  HHG.Rmd  style.css
